http request to store given tags